# ChangeLog for sys-libs/glibc
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.591 2008/09/05 20:23:16 vapier Exp $

  05 Sep 2008; Mike Frysinger <vapier@gentoo.org> glibc-2.3.5-r3.ebuild,
  glibc-2.3.6-r4.ebuild, glibc-2.3.6-r5.ebuild, glibc-2.4-r4.ebuild,
  glibc-2.5-r2.ebuild, glibc-2.5-r3.ebuild, glibc-2.5-r4.ebuild,
  glibc-2.5.1.ebuild, glibc-2.6.ebuild, glibc-2.6.1.ebuild,
  glibc-2.7-r2.ebuild, glibc-2.8_p20080602.ebuild:
  Drop app-admin/eselect-compiler dependency to make Mr_Bones_ happy.

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  23 Jun 2008; Mike Frysinger <vapier@gentoo.org>
  files/eblits/src_compile.eblit:
  Check to see if ports is in $S rather than $PWD #229107.

  23 Jun 2008; Mike Frysinger <vapier@gentoo.org>
  files/eblits/src_compile.eblit, files/eblits/src_install.eblit,
  files/eblits/src_install-2.6.eblit, glibc-2.6.1.ebuild,
  glibc-2.7-r2.ebuild, glibc-2.8_p20080602.ebuild:
  Short circuit header building in pkg testing and ABI recursion.

  23 Jun 2008; Mike Frysinger <vapier@gentoo.org> glibc-2.6.1.ebuild,
  glibc-2.7-r2.ebuild, glibc-2.8_p20080602.ebuild:
  Add workaround for still broken #133327 / #228907.

  22 Jun 2008; Friedrich Oslage <bluebird@gentoo.org>
  glibc-2.8_p20080602.ebuild:
  Add ~sparc keyword

  22 Jun 2008; Friedrich Oslage <bluebird@gentoo.org>
  files/eblits/common.eblit:
  add support for 32bit userland with multilib on sparc

  22 Jun 2008; Mike Frysinger <vapier@gentoo.org> glibc-2.6.1.ebuild,
  glibc-2.7-r2.ebuild, glibc-2.8_p20080602.ebuild:
  Change to / before running tests in case $PWD is weird #228809 by Kai
  Krakow.

  21 Jun 2008; Mike Frysinger <vapier@gentoo.org>
  glibc-2.8_p20080602.ebuild:
  Add ~alpha and ~ia64 love.

  17 Jun 2008; Mike Frysinger <vapier@gentoo.org>
  glibc-2.8_p20080602.ebuild:
  Fix building for alpha #227275.
