@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/glibc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.591 2008/09/05 20:23:16 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.592 2008/10/27 03:02:27 vapier Exp $
+
+  27 Oct 2008; Mike Frysinger <vapier@gentoo.org>
+  glibc-2.8_p20080602.ebuild:
+  Fix building for arm.
 
   05 Sep 2008; Mike Frysinger <vapier@gentoo.org> glibc-2.3.5-r3.ebuild,
   glibc-2.3.6-r4.ebuild, glibc-2.3.6-r5.ebuild, glibc-2.4-r4.ebuild,
